# jwt-paradigms

./: .#presentation.org  .dir-locals.el  .env.example  .envrc  .gitattributes  .gitignore  CLAUDE.md  CLAUDE.org  INIT_ACTIONS.org  Makefile  README.md  README.org  examples.org  presentation.org  presentation.tex  presentation_es.org  presentation_es.tex  presentation_fr.org  presentation_fr.tex  scenarios.org  tangle_chapters.sh
personas/: .gitignore  CLAUDE.md  CLAUDE.org  HEADSHOT_WORKFLOW.md  Makefile  README.md  README.org  academic_gadfly_marcus_wellington.org  accessibility_advocate_marco_hernandez.md  accessibility_advocate_marco_hernandez.org  ai_assistant_claude_anthropic.org  ai_ethics_researcher_amara_chen.md  ai_ethics_researcher_amara_chen.org  ai_ml_engineer_david_park.org  beginner_friendly.md  beginner_friendly_sofia_martinez.org  blockchain_developer_zoe_kim.org  chief_executive_officer_james_wilson.org  chief_financial_officer_isabella_garcia.org  chief_financial_officer_olivia_rodriguez.org  chief_information_security_officer_rebecca_martinez.org  chief_technology_officer_michael_chen.org  cloud_architect_anjali_patel.org  code_quality_advocate_james_wilson.md  code_quality_advocate_james_wilson.org  collaborative_software_researcher_diego_martinez.md  collaborative_software_researcher_diego_martinez.org  devops_engineer_alex_rodriguez.org  distributed_systems_architect_lambda_hopper.org  executive_sponsor_eleanor_reynolds.md  executive_sponsor_eleanor_reynolds.org  fix_image_blocks.py  frontend_specialist_jordan_taylor.org  gadfly.md  (+36 more)
(+230 files in other folders)
